--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ body {
 
 .header-vk {
   padding-left: 40px;
-  background-image: url("img/vk-social-network-logo.svg");
+  background-image: url("img/vk-social-network-logo.svg")width: 30px; height: 170px; border: none;
+}
 
 .header-email {
   padding-left: 30px;
