--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 
 .header-vk {
   padding-left: 40px;
-  background-image: url("img/vk-social-network-logo.svg")width: 30px; height: 170px; border: none;
+  background-image: url("img/vk-social-network-logo.svg");
 }
 
 .header-email {
